Fixex accessibility and contrast errors on Adopt page

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,8 @@
   
   border-left: 10px solid green;
 }
+
+
+.stroke-item {
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+}
